devops/area1/app1/overlays/desarrollo/patch_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: app1-container
        image: quay.io/redhattraining/hello-nginx:v1.0
