devops/area1/app1/overlays/desarrollo/patch_route_host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mi-aplicacion-route
  namespace: mi-proyecto
spec:
  host: app1-desarrollo.apps.ocp.local
