devops/area1/app1/overlays/desarrollo/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: app1-route
  labels:
    app.kubernetes.io/instance: app1-produccion
spec:
  host: app1-desarrollo.apps.ocp.local
  to:
    kind: Service
    name: app1-service-pruebas
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
